# cpp-blackjack

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
src/: blackjack.cpp  blackjack.hpp  main.cpp
tests/: CMakeLists.txt  blackjack_unittest.cpp
